# TinyTrie

./: .gitignore  .rustfmt.toml  CLAUDE.md  Cargo.toml  README.md  bench_results.md  gen_corpus.py  rust-toolchain.toml  trie-stats-words.txt  trie_stats.txt
.cargo/: config.toml
.claude/: settings.json  settings.local.json
benches/: bench.rs  bench_results copy.md  bench_results.json  bench_results.md  bench_results_lines.json  bench_results_lines.md  bench_results_random_txt.json  bench_results_random_txt.md  bench_results_random_u64.json  bench_results_random_u64.md  bench_results_seq_txt.json  bench_results_seq_txt.md  bench_results_seq_u64.json  bench_results_seq_u64.md  bench_results_words.json  bench_results_words.md  benching.md
crates/archive/: Cargo.toml
crates/arrays/: CLAUDE.md  Cargo.toml  lib.rs
crates/benchable_map/: Cargo.toml
crates/benches/: CLAUDE.md  Cargo.toml  bench_results_random_txt.json  bench_results_random_txt.md  bench_results_random_u64.json  bench_results_random_u64.md  bench_results_seq_u64.json  bench_results_words.json  trie-stats.rs
crates/benches/src/: benchable_map.rs  btree.rs  keygen.rs  lib.rs  main.rs  nibble_trie.rs  poly_trie.rs  results.rs  stacked_trie.rs  tiny_btree.rs
crates/btrees/: CLAUDE.md  Cargo.toml
crates/ctree/: Cargo.toml
crates/doa/: CLAUDE.md  Cargo.toml  bench notes.md
crates/doa/.claude/: settings.local.json
crates/doa/benches/: find_slot_bench.rs  layout_bench.rs
crates/doa/examples/: bench_ca.rs
crates/doa/pseudocode/: arena_insertion.md  block_management.md  lessons.md  node_traits.md
crates/doa/src/: abstract_tree.rs  arena.rs  block.rs  find_slot.rs  index.rs  inline_leafblock.rs  leafblock.rs  lib.rs  strategy.rs  tree_traits.rs
crates/doa/src/archive/: arena.rs  block.rs  find_slot.rs  lib.rs
crates/doa/src/archive/tests/: find_slot.rs  mod.rs
crates/poly-trie/: CLAUDE.md  Cargo.toml
crates/tiny-trie/: CLAUDE.md  Cargo.toml  LICENSE.md  README.md
crates/tiny-trie-trait/: Cargo.toml
crates/tiny-trie/src/: bit_trie.rs  dyn_trie.rs  fixed_len_nibble_trie.rs  flat_node.rs  key_store.rs  lib.rs  nib_trie.rs  nibble_trie.rs  simd.rs  tiny_array.rs
crates/tiny-trie/src/tests/: bit_trie.rs  dyn_trie.rs  fixed_len_nibble_trie.rs  nib_trie.rs  nibble_trie.rs
notes/: _summary.md  _traits.md  arena_trie.md  benching.md  bit_trie.md  bit_trie_opt.md  design.md  doa.md  fnode.md  merging.md  nibble_trie.md  nibble_trie_opt.md  poly-trie.md  prefix_trie.md  preview-ctree-plan.md  promotion.md  serialization.md  ssa.md  tiny_btree_iter_opt.md  tiny_btree_plan.md  todo.md
notes/btree_testing/: analyze_sweep.py  bench_ctree_sweep_lines.md  bench_ctree_sweep_random_keys.md  bench_ctree_sweep_u64.md  bench_ctree_sweep_words.md  sweep_params.sh
notes/nibble_trie_testing/: trie-stats-lines.txt  trie-stats-random.txt
src/: arena.rs  arena_trie.rs  bit_trie.rs  dyn_nibble_trie.rs  dyn_trie.rs  fixed_len_nibble_trie.rs  key_store.rs  lib.rs  main.rs  nib_trie.rs  nibble_trie.rs  pairvec.rs  poly_trie.rs  prefix_trie.rs  simd.rs  tiny_array.rs  tiny_btree.rs  tiny_trie_map.rs
src/archive/: pairvec.rs  poly_trie.rs  prefix_len.rs  prefix_trie.rs
src/bench/: bit_trie.rs  dyn_trie.rs  fixed_len.rs  keygen.rs  mod.rs  nibble_trie.rs  poly_trie.rs  results.rs  stacked_trie.rs  std_contestants.rs  tiny_btree.rs
src/tests/: bit_trie.rs  dyn_nibble_trie.rs  dyn_trie.rs  (+4 more)
(+34 files in other folders)
