[workspace]
members = [
    "crates/tiny-trie-trait",
    "crates/tiny-trie",
    "crates/btrees",
    "crates/poly-trie",
    "crates/benches", "crates/arrays",
]
resolver = "2"

[workspace.dependencies]
# Workspace crates — path declared once here
tiny-trie = { path = "crates/tiny-trie" }
tiny-trie-trait = { path = "crates/tiny-trie-trait" }
btrees = { path = "crates/btrees" }
poly-trie = { path = "crates/poly-trie" }
bencher = { path = "crates/benches" }
