[workspace]
members = [
    "crates/benchable_map",
    "crates/tiny-trie",
    "crates/btrees",
    "crates/poly-trie",
    "crates/benches", "crates/arrays",
]
resolver = "2"

[workspace.dependencies]
# Workspace crates — path declared once here
tiny-trie = { path = "crates/tiny-trie" }
benchable_map = { path = "crates/benchable_map" }
btrees = { path = "crates/btrees" }
poly-trie = { path = "crates/poly-trie" }
bencher = { path = "crates/benches" }
