[workspace]
members = [
    "crates/tiny-trie",
    "crates/btrees",
    "crates/poly-trie",
    "crates/benches", "crates/arrays", "crates/doa",
]
resolver = "2"

[workspace.dependencies]
# Workspace crates — path declared once here
tiny-trie = { path = "crates/tiny-trie" }
btrees = { path = "crates/btrees" }
poly-trie = { path = "crates/poly-trie" }
bencher = { path = "crates/benches" }
