[package]
name = "bencher"
version = "0.1.0"
edition = "2024"
description = "Benchmark harness for trie data structures"
publish = false

[lib]
name = "tiny_trie_bench"
path = "src/lib.rs"

[[bin]]
name = "bencher"
path = "src/main.rs"

[[bin]]
name = "trie-stats"
path = "trie-stats.rs"

[dependencies]
tiny-trie.workspace = true
tiny-trie-trait.workspace = true
ctree.workspace=true
poly-trie.workspace=true
clap = { version = "4.6.1", features = ["derive"] }
rand = "0.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
