[package]
name = "tiny-trie"
authors = ["Daniel A Gutierrez"]
version = "0.1.0"
edition = "2024"
description = "Arena-based radix tries (2/4/16-way)"
license = "MIT"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }

[features]
default = []
dyn = []
fixed-len = []
unchecked = []