[package]
name = "tiny-trie"
authors = ["Daniel A Gutierrez"]
version = "0.0.1"
edition = "2024"
description = "Arena-based radix tries (2/4/16-way)"
license = "Apache 2.0"
repository = "https://github.com/Daniel-A-Gutierrez/TinyTrie"
homepage = "https://github.com/Daniel-A-Gutierrez/TinyTrie"
readme = "README.md"
[dependencies]

[features]
default = []
dyn = []
fixed-len = []
unchecked = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]